[package]
name = "netdump_client"
version = "0.1.0"
authors = ["Marime Gui"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
ez_io = { git = "https://github.com/MarimeGui/ez_io" }
num-derive = "0.3.0"
num-traits = "0.2.11"